--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 members = [
     'node',
-    'pallets/template',
+    'pallets/dex',
     'pallets/erc20',
     'traits',
     'runtime',
