--- a/pallets/dex/Cargo.toml
+++ b/pallets/dex/Cargo.toml
@@ -1,13 +1,9 @@
 [package]
-name = 'pallet-template'
-version = '4.0.0-dev'
-description = 'FRAME pallet template for defining custom runtime logic.'
-authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
-homepage = 'https://substrate.io/'
+name = 'pallet-dex'
+version = '0.1.0'
 edition = '2021'
 license = 'Unlicense'
 publish = false
-repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
 
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
