--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -12,10 +12,10 @@ repository = 'https://github.com/substrate-developer-hub/substrate-node-template
 [package.metadata.docs.rs]
 targets = ['x86_64-unknown-linux-gnu']
 
-[dependencies.pallet-template]
+[dependencies.pallet-dex]
 default-features = false
-path = '../pallets/template'
-version = '4.0.0-dev'
+path = '../pallets/dex'
+version = '0.1.0'
 
 [dependencies.pallet-erc20]
 default-features = false
@@ -203,7 +203,7 @@ runtime-benchmarks = [
     'frame-system/runtime-benchmarks',
     'hex-literal',
     'pallet-balances/runtime-benchmarks',
-    'pallet-template/runtime-benchmarks',
+    'pallet-dex/runtime-benchmarks',
     'pallet-timestamp/runtime-benchmarks',
     'sp-runtime/runtime-benchmarks',
 ]
@@ -219,7 +219,7 @@ std = [
     'pallet-grandpa/std',
     'pallet-randomness-collective-flip/std',
     'pallet-sudo/std',
-    'pallet-template/std',
+    'pallet-dex/std',
     'pallet-erc20/std',
     'pallet-timestamp/std',
     'pallet-transaction-payment-rpc-runtime-api/std',
